shrink systemwarn font size to avoid width overflow on some systems like FF on OSX
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3469 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -1157,7 +1157,8 @@ a:hover.genericbutton {
     border: 1px solid gold;
     border-radius: 4px;
     color: red;
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: bold;
     background-color: gold;
     background-image: url('/images/icons/error.png');
     background-position: left center;
